--- a/package.json
+++ b/package.json
@@ -30,13 +30,13 @@
   "version": "7.3.1",
   "requiredAngularVersion": ">=7.0.0",
   "dependencies": {
-    "@angular/animations": "^7.2.1",
-    "@angular/common": "^7.2.1",
-    "@angular/compiler": "^7.2.1",
-    "@angular/core": "^7.2.1",
-    "@angular/elements": "^7.2.1",
-    "@angular/forms": "^7.2.1",
-    "@angular/platform-browser": "^7.2.1",
+    "@angular/animations": "^7.2.4",
+    "@angular/common": "^7.2.4",
+    "@angular/compiler": "^7.2.4",
+    "@angular/core": "^7.2.4",
+    "@angular/elements": "^7.2.4",
+    "@angular/forms": "^7.2.4",
+    "@angular/platform-browser": "^7.2.4",
     "@webcomponents/custom-elements": "^1.1.0",
     "core-js": "^2.6.1",
     "rxjs": "^6.3.3",
@@ -48,15 +48,15 @@
   "devDependencies": {
     "@angular-devkit/core": "7.1.2",
     "@angular-devkit/schematics": "7.1.2",
-    "@angular/bazel": "^7.2.1",
-    "@angular/compiler-cli": "^7.2.1",
-    "@angular/http": "^7.2.1",
-    "@angular/platform-browser-dynamic": "^7.2.1",
-    "@angular/platform-server": "^7.2.1",
-    "@angular/router": "^7.2.1",
+    "@angular/bazel": "^7.2.4",
+    "@angular/compiler-cli": "^7.2.4",
+    "@angular/http": "^7.2.4",
+    "@angular/platform-browser-dynamic": "^7.2.4",
+    "@angular/platform-server": "^7.2.4",
+    "@angular/router": "^7.2.4",
     "@bazel/ibazel": "^0.9.0",
-    "@bazel/karma": "0.22.1",
-    "@bazel/typescript": "0.22.1",
+    "@bazel/karma": "=0.24.1",
+    "@bazel/typescript": "=0.24.1",
     "@firebase/app-types": "^0.3.2",
     "@octokit/rest": "^15.9.4",
     "@schematics/angular": "7.1.2",
